--- a/Librarian.csproj
+++ b/Librarian.csproj
@@ -63,8 +63,10 @@
     <Compile Include="LzssDecompressor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WdtContentList.cs" />
-    <Compile Include="WdtFile.cs" />
+    <Compile Include="Chapter.cs" />
+    <Compile Include="ChapterList.cs" />
+    <Compile Include="TableOfContents.cs" />
+    <Compile Include="Book.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
