--- a/Librarian.csproj
+++ b/Librarian.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="BinaryUtils.cs" />
     <Compile Include="DebugUtils.cs" />
+    <Compile Include="Rle.cs" />
     <Compile Include="TzarFileInfo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Decompressor.cs" />
