[WIP] Working on RLE color table decoding
RLE type 7 decoding is almost complete

--- a/Librarian.csproj
+++ b/Librarian.csproj
@@ -58,7 +58,9 @@
   <ItemGroup>
     <Compile Include="BinaryUtils.cs" />
     <Compile Include="DebugUtils.cs" />
-    <Compile Include="Rle.cs" />
+    <Compile Include="Rle\BmpFile.cs" />
+    <Compile Include="Rle\RleDecompressor.cs" />
+    <Compile Include="Rle\RleFile.cs" />
     <Compile Include="TzarFileInfo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Decompressor.cs" />
