Finished RLE decoding
Validated all decoded RLEs

--- a/Librarian.csproj
+++ b/Librarian.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ChapterList.cs" />
     <Compile Include="TableOfContents.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="ValidityUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
